# sturgeon-run

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
ci/snapshots/: README.md  gbif_occurrences_4287132.json  gbif_taxa.json  usgs_iv.json  usgs_sites.rdb
corridor-api/: Cargo.toml  Dockerfile
corridor-api/src/: lib.rs  main.rs  params.rs
corridor-api/tests/: params.rs
data/snapshots/: usgs_sites.rdb
db/init/: 01_extensions.sql  02_schema.sql  03_indexes.sql
docs/: CONTRACTS.md
ingest/: Dockerfile  requirements.txt
ingest/sturgeon_ingest/: __init__.py  cli.py  config.py  db.py  gbif.py  report.py  usgs.py  validate.py
ingest/tests/: test_validate.py
k8s/base/: config.yaml  corridor-api.yaml  ingest-job.yaml  kustomization.yaml  mcp.yaml  postgis.yaml  secret.yaml  tiles.yaml  web.yaml
k8s/overlays/dev/: kustomization.yaml  namespace.yaml  nodeports.yaml  secret-dev.yaml
mcp/: Dockerfile  package-lock.json  package.json
mcp/src/: api.ts  server.ts  tools.ts
scripts/: smoke.sh
tiles/: config.yaml
web/: .dockerignore  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
web/scripts/: build_basemap.py  verify_map.py
web/src/: App.tsx  api.ts  index.css  main.tsx  mapStyle.ts  theme.ts
web/src/basemap/: hudson.geojson
web/src/components/: FieldLog.tsx  MapView.tsx  StationPopup.ts  TimeFilter.tsx
